# gollie-transfusion

./: .gitignore  pyproject.toml  transform_data.py
GoLLIE/: .gitattributes  run_training.sh
GoLLIE/bash_scripts/: run_inference.sh
GoLLIE/configs/data_configs/: ace_config.json  bc5cdr_config.json  broadtwitter_config.json  casie_config.json  conll03_config.json  conll03_config_nomisc.json  conll04_config.json  crossner_ai_config.json  crossner_ai_wo_misc_config.json  crossner_literature_config.json  crossner_literature_wo_misc_config.json  crossner_music_config.json  crossner_music_wo_misc_config.json  crossner_politics_config.json  crossner_politics_wo_misc_config.json  crossner_science_config.json  crossner_science_wo_misc_config.json  diann_config.json  e3c_config.json  europarl_config.json  fabner_config.json  harveyner_config.json  masakhaner_bam_config.json  mitmovie_config.json  mitrestaurant_config.json  multinerd_config.json  ncbidisease_config.json  ontonotes_config.json  rams_config.json  tacred_config.json  wikievents_config.json  wnut17_config.json
GoLLIE/configs/model_configs/: config.yaml  gollie-tf.yaml
GoLLIE/notebooks/: tf.ipynb
GoLLIE/src/: config.py  easy_eval.py  evaluate.py  generate_data.py  generate_easyproject_data.py  generate_translatetest_data.py  hf_inference.py  run.py  run_easyproject.py  run_translation.py  trainer.py
GoLLIE/src/dataset/: dataset.py
GoLLIE/src/model/: load_model.py  model_utils.py
GoLLIE/src/paraphrase/: config.py  dataset.py  run_paraphrasing.py  utils.py
GoLLIE/wandb/: latest-run
(+661 files in other folders)
